Move on with resolution